#9 Updated/added enums EMailPriority, ReportPaperOrientation, RoleRelationToOwner, SystemEventScope, TicketOrigin

--- a/docs/api-reference/CRMScript.NetServer.ActivityStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.ActivityStatus.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: ActivityStatus
   fullName: CRMScript.NetServer.ActivityStatus
   type: Enum
-  summary: "\nCompleted status enum common to appointments, documents, and sales.\n"
+  summary: "\nCompleted status common to appointments, documents, and sales.\n"
 - uid: CRMScript.NetServer.ActivityStatus.Unknown
   commentId: F:CRMScript.NetServer.ActivityStatus.Unknown
   id: ActivityStatus.Unknown
