--- a/docs/api-reference/CRMScript.NetServer.Checkoutstate.yml
+++ b/docs/api-reference/CRMScript.NetServer.Checkoutstate.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: CheckoutState
   fullName: CRMScript.NetServer.CheckoutState
   type: Enum
-  summary: "\nEnum listing the possible checkout states of a document, as seen from outside the document plugin\n"
+  summary: "\nThe possible checkout states of a document, as seen from outside the document plugin\n"
 - uid: CRMScript.NetServer.CheckoutState.NotCheckedOut
   commentId: F:CRMScript.NetServer.CheckoutState.NotCheckedOut
   id: CheckoutState.NotCheckedOut
