--- a/docs/api-reference/CRMScript.NetServer.ContactAction.yml
+++ b/docs/api-reference/CRMScript.NetServer.ContactAction.yml
@@ -20,7 +20,7 @@ items:
   nameWithType: ContactAction
   fullName: CRMScript.NetServer.ContactAction
   type: Enum
-  summary: "\nDescribes what type of activity/action there has been on a contact<p></p>\nThis Enum consists of flag values that can be combined.\n"
+  summary: "\nDescribes what type of activity/action there has been on a contact<p></p>\nConsists of flag values that can be combined.\n"
 - uid: CRMScript.NetServer.ContactAction.Unknown
   commentId: F:CRMScript.NetServer.ContactAction.Unknown
   id: ContactAction.Unknown
