--- a/docs/api-reference/CRMScript.NetServer.ContactSourceType.yml
+++ b/docs/api-reference/CRMScript.NetServer.ContactSourceType.yml
@@ -16,7 +16,7 @@ items:
   nameWithType: ContactSourceType
   fullName: CRMScript.NetServer.ContactSourceType
   type: Enum
-  summary: "\nDescribes what source the contacts should be retrieved from.<p></p>\nThis Enum consists of flag values that can be combined.\n"
+  summary: "\nDescribes what source the contacts should be retrieved from.<p></p>\nConsists of flag values that can be combined.\n"
 - uid: CRMScript.NetServer.ContactSourceType.Unknown
   commentId: F:CRMScript.NetServer.ContactSourceType.Unknown
   id: ContactSourceType.Unknown
