--- a/docs/api-reference/CRMScript.NetServer.ETableRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.ETableRight.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: ETableRight
   fullName: CRMScript.NetServer.ETableRight
   type: Enum
-  summary: "\nA combination of bits representing permissions on a row.\nThis Enum consists of flag values that can be combined.\n"
+  summary: "\nA combination of bits representing permissions on a row.\nConsists of flag values that can be combined.\n"
 - uid: CRMScript.NetServer.ETableRight.None
   commentId: F:CRMScript.NetServer.ETableRight.None
   id: ETableRight.None
