--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -134,14 +134,14 @@ items:
   nameWithType: NSReportEntity.GetReportCategory()
   fullName: CRMScript.NetServer.NSReportEntity.GetReportCategory()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = All</li><li>Enum: 2 = Contact</li><li>Enum: 3 = Project</li><li>Enum: 4 = Sale</li><li>Enum: 5 = Appointment</li><li>Enum: 6 = Selection</li><li>Enum: 7 = Person</li><li>Enum: 8 = Diary</li><li>Enum: 9 = Favorites</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetReportCategory()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The category of the report.
+      description: The category of the report. See <xref href=\"ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReportEntity thing;\nInteger reportCategory = thing.GetReportCategory();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.GetReportId()
@@ -174,14 +174,14 @@ items:
   nameWithType: NSReportEntity.GetReportLayout()
   fullName: CRMScript.NetServer.NSReportEntity.GetReportLayout()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = List</li><li>Enum: 2 = Label</li><li>Enum: 3 = GroupList</li><li>Enum: 4 = CrossTable</li><li>Enum: 5 = CalendarWeek5</li><li>Enum: 6 = CalendarWeek7</li><li>Enum: 7 = CalendarMonth</li><li>Enum: 8 = Text</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetReportLayout()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The layout of the report.
+      description: The layout of the report. See <xref href=\"ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSReportEntity thing;\nInteger reportLayout = thing.GetReportLayout();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.GetTemplateId()
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: reportCategory
       type: CRMScript.Global.Integer
-      description: The category of the report. See enum reportCategory.
+      description: The category of the report. See <xref href=\"ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: reportLayout
       type: CRMScript.Global.Integer
-      description: The layout of the report. See enum reportLayout.
+      description: The layout of the report. See <xref href=\"ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -411,3 +411,15 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ReportLayout
+  commentId: T:CRMScript.NetServer.ReportLayout
+  isExternal: true
+  name: ReportLayout
+  nameWithType: ReportLayout
+  fullName: CRMScript.NetServer.ReportLayout
+- uid: CRMScript.NetServer.ReportCategory
+  commentId: T:CRMScript.NetServer.ReportCategory
+  isExternal: true
+  name: ReportCategory
+  nameWithType: ReportCategory
+  fullName: CRMScript.NetServer.ReportCategory
