--- a/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
@@ -182,14 +182,14 @@ items:
   nameWithType: NSReportLabelLayoutEntity.GetOrientation()
   fullName: CRMScript.NetServer.NSReportLabelLayoutEntity.GetOrientation()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Portrait</li><li>Enum: 2 = Landscape</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetOrientation()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Paper orientation 1=portrait, 2=landscape
+      description: Paper orientation 1=portrait, 2=landscape. See <xref href=\"ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReportLabelLayoutEntity thing;\nInteger orientation = thing.GetOrientation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportLabelLayoutEntity.GetPaperHeight()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: orientation
       type: CRMScript.Global.Integer
-      description: Paper orientation 1=portrait, 2=landscape. See enum orientation.
+      description: Paper orientation. 1=portrait, 2=landscape. See <xref href=\"ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -581,3 +581,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ReportPaperOrientation
+  commentId: T:CRMScript.NetServer.ReportPaperOrientation
+  isExternal: true
+  name: ReportPaperOrientation
+  nameWithType: ReportPaperOrientation
+  fullName: CRMScript.NetServer.ReportPaperOrientation
