--- a/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
@@ -290,10 +290,10 @@ items:
       description: 
     - id: targetSelectionType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: copyMembers
       type: CRMScript.Global.Bool
-      description: See enum copyMembers.
+      description: 
     return:
       type: CRMScript.NetServer.NSSelectionEntity
   example: 
@@ -448,10 +448,10 @@ items:
       description: 
     - id: targetSelectionType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: copyMembers
       type: CRMScript.Global.Bool
-      description: See enum copyMembers.
+      description: 
     return:
       type: CRMScript.NetServer.NSSelectionEntity
   example: 
@@ -1590,3 +1590,9 @@ references:
   name: NSTypicalSearch
   nameWithType: NSTypicalSearch
   fullName: CRMScript.NetServer.NSTypicalSearch
+- uid: CRMScript.NetServer.SelectionType
+  commentId: T:CRMScript.NetServer.SelectionType
+  isExternal: true
+  name: SelectionType
+  nameWithType: SelectionType
+  fullName: CRMScript.NetServer.SelectionType
