--- a/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
@@ -657,14 +657,14 @@ items:
   nameWithType: NSSelectionEntity.GetSelectionType()
   fullName: CRMScript.NetServer.NSSelectionEntity.GetSelectionType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Static</li><li>Enum: 1 = Dynamic</li><li>Enum: 2 = Combined</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSelectionType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Static/Dynamic/Combined?
+      description: Static/Dynamic/Combined? See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSSelectionEntity thing;\nInteger selectionType = thing.GetSelectionType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionEntity.GetSelectionUnionType()
@@ -677,14 +677,14 @@ items:
   nameWithType: NSSelectionEntity.GetSelectionUnionType()
   fullName: CRMScript.NetServer.NSSelectionEntity.GetSelectionUnionType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = SubtractRightFromLeft</li><li>Enum: 2 = SubtractLeftFromRight</li><li>Enum: 3 = Intersect</li><li>Enum: 4 = XOR</li><li>Enum: 5 = Union</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSelectionUnionType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: How to combine the two selections when SelectionType = Combined.
+      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSelectionEntity thing;\nInteger selectionUnionType = thing.GetSelectionUnionType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionEntity.GetShadowProviderName()
@@ -1515,7 +1515,7 @@ items:
     parameters:
     - id: selectionType
       type: CRMScript.Global.Integer
-      description: Static/Dynamic/Combined? See enum selectionType.
+      description: Static/Dynamic/Combined? See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1537,7 +1537,7 @@ items:
     parameters:
     - id: selectionUnionType
       type: CRMScript.Global.Integer
-      description: How to combine the two selections when SelectionType = Combined. See enum selectionUnionType.
+      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1853,3 +1853,15 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.SelectionUnionType
+  commentId: T:CRMScript.NetServer.SelectionUnionType
+  isExternal: true
+  name: SelectionUnionType
+  nameWithType: SelectionUnionType
+  fullName: CRMScript.NetServer.SelectionUnionType
+- uid: CRMScript.NetServer.SelectionType
+  commentId: T:CRMScript.NetServer.SelectionType
+  isExternal: true
+  name: SelectionType
+  nameWithType: SelectionType
+  fullName: CRMScript.NetServer.SelectionType
