--- a/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
@@ -198,14 +198,14 @@ items:
   nameWithType: NSSystemEventEntity.GetScope()
   fullName: CRMScript.NetServer.NSSystemEventEntity.GetScope()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Undefined</li><li>Enum: 1 = SystemWide</li><li>Enum: 2 = Database</li><li>Enum: 3 = Group</li><li>Enum: 4 = User</li></ul><pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetScope()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1 = system-wide, 2= database, 3 = group, 4 = user
+      description: See <xref href=\"SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSSystemEventEntity thing;\nInteger scope = thing.GetScope();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSystemEventEntity.GetSystemEventId()
@@ -419,7 +419,7 @@ items:
     parameters:
     - id: scope
       type: CRMScript.Global.Integer
-      description: 1 = system-wide, 2= database, 3 = group, 4 = user. See enum scope.
+      description: See <xref href=\"SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -505,3 +505,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.SystemEventScope
+  commentId: T:CRMScript.NetServer.SystemEventScope
+  isExternal: true
+  name: SystemEventScope
+  nameWithType: SystemEventScope
+  fullName: CRMScript.NetServer.SystemEventScope
