--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -908,7 +908,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: MDO List name = 'FunctionRights', extra='roleType=0' See enum roleType.
+      description: MDO List name = 'FunctionRights', extra='roleType=0'. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSSelectableMDOListItem[]
   example: 
@@ -930,7 +930,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: MDO List name = 'Roles', extra='0' (roleType) See enum roleType.
+      description: MDO List name = 'Roles', extra='0' (roleType) See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSSelectableMDOListItem[]
   example: 
@@ -1091,7 +1091,7 @@ items:
       description: 
     - id: relationToOwner
       type: CRMScript.Global.Integer
-      description: See enum relationToOwner.
+      description: See <xref href=\"RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.String
       description:
@@ -2092,10 +2092,10 @@ items:
       description: 
     - id: relationToOwner
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: dataRightValue
       type: CRMScript.Global.String
-      description: See enum dataRightValue.
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2605,3 +2605,15 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.RoleType
+  commentId: T:CRMScript.NetServer.RoleType
+  isExternal: true
+  name: RoleType
+  nameWithType: RoleType
+  fullName: CRMScript.NetServer.RoleType
+- uid: CRMScript.NetServer.RoleRelationToOwner
+  commentId: T:CRMScript.NetServer.RoleRelationToOwner
+  isExternal: true
+  name: RoleRelationToOwner
+  nameWithType: RoleRelationToOwner
+  fullName: CRMScript.NetServer.RoleRelationToOwner
