--- a/docs/api-reference/CRMScript.NetServer.WidgetRequiredFields.yml
+++ b/docs/api-reference/CRMScript.NetServer.WidgetRequiredFields.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: WidgetRequiredFields
   fullName: CRMScript.NetServer.WidgetRequiredFields
   type: Enum
-  summary: "\nValue for field widget_offline_fields in table chat_topic.\nThis Enum consists of flag values that can be combined.\n"
+  summary: "\nValue for field widget_offline_fields in table chat_topic.\nConsists of flag values that can be combined.\n"
 - uid: CRMScript.NetServer.WidgetRequiredFields.None
   commentId: F:CRMScript.NetServer.WidgetRequiredFields.None
   id: WidgetRequiredFields.None
