--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -912,14 +912,10 @@ items:
       href: CRMScript.NetServer.ConfigType.yml
     - name: ContactSourceType
       href: CRMScript.NetServer.ContactSourceType.yml
-    - name: Enum copyMembers
-      href: CRMScript.NetServer.copyMembers.yml
     - name: Enum countryId
       href: CRMScript.NetServer.countryId.yml
     - name: CredentialControlType
       href: CRMScript.NetServer.CredentialControlType.yml
-    - name: Enum dataRightValue
-      href: CRMScript.NetServer.dataRightValue.yml
     - name: Enum defaultVideomeetingStatus
       href: CRMScript.NetServer.defaultVideomeetingStatus.yml
     - name: Enum description
@@ -948,6 +944,8 @@ items:
       href: CRMScript.NetServer.entityId.yml
     - name: Enum erpActorType
       href: CRMScript.NetServer.erpActorType.yml
+    - name: EMailPriority
+      href: CRMScript.NetServer.EMailPriority.yml
     - name: ETableRight
       href: CRMScript.NetServer.ETableRight.yml
     - name: EventHandlerType
@@ -984,20 +982,14 @@ items:
       href: CRMScript.NetServer.Navigation.yml
     - name: OrderBySortType
       href: CRMScript.NetServer.OrderBySortType.yml
-    - name: Enum orientation
-      href: CRMScript.NetServer.orientation.yml
     - name: NotificationPlatform
       href: CRMScript.NetServer.NotificationPlatform.yml
-    - name: Enum origin
-      href: CRMScript.NetServer.origin.yml
     - name: PrefDescAccessFlags
       href: CRMScript.NetServer.PrefDescAccessFlags.yml
     - name: PrefDescValueType
       href: CRMScript.NetServer.PrefDescValueType.yml
     - name: PreferenceLevel
       href: CRMScript.NetServer.PreferenceLevel.yml
-    - name: Enum priority
-      href: CRMScript.NetServer.priority.yml
     - name: PublishType
       href: CRMScript.NetServer.PublishType.yml
     - name: RecurrencePattern
@@ -1006,25 +998,24 @@ items:
       href: CRMScript.NetServer.RecurrenceUpdateMode.yml
     - name: RelationTarget
       href: CRMScript.NetServer.RelationTarget.yml
-    - name: Enum relationToOwner
-      href: CRMScript.NetServer.relationToOwner.yml
-    - name: Enum reportCategory
-      href: CRMScript.NetServer.reportCategory.yml
-    - name: Enum reportLayout
-      href: CRMScript.NetServer.reportLayout.yml
+    - name: ReportCategory
+      href: CRMScript.NetServer.ReportCategory.yml
+    - name: ReportLayout
+      href: CRMScript.NetServer.ReportLayout.yml
+    - name: ReportPaperOrientation
+      href: CRMScript.NetServer.ReportPaperOrientation.yml
     - name: ReturnType
       href: CRMScript.NetServer.ReturnType.yml
-    - name: Enum roleType
-      href: CRMScript.NetServer.roleType.yml
+    - name: RoleRelationToOwner
+      href: CRMScript.NetServer.RoleRelationToOwner.yml
+    - name: RoleType
+      href: CRMScript.NetServer.RoleType.yml
     - name: SaleStatus
       href: CRMScript.NetServer.SaleStatus.yml
-    - name: Enum selectionType
-    - name: Enum scope
-      href: CRMScript.NetServer.scope.yml
-    - name: Enum selectionType
-      href: CRMScript.NetServer.selectionType.yml
-    - name: Enum selectionUnionType
-      href: CRMScript.NetServer.selectionUnionType.yml
+    - name: SelectionType
+      href: CRMScript.NetServer.SelectionType.yml
+    - name: SelectionUnionType
+      href: CRMScript.NetServer.SelectionUnionType.yml
     - name: SenderMailMode
       href: CRMScript.NetServer.SenderMailMode.yml
     - name: MailboxType
@@ -1037,6 +1028,8 @@ items:
       href: CRMScript.NetServer.ShowState.yml
     - name: StringSearchType
       href: CRMScript.NetServer.StringSearchType.yml
+    - name: SystemEventScope
+      href: CRMScript.NetServer.SystemEventScope.yml
     - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
     - name: TemporaryKeyDomain
@@ -1047,6 +1040,8 @@ items:
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
     - name: TicketCategoryDelegateMethod
       href: CRMScript.NetServer.TicketCategoryDelegateMethod.yml
+    - name: TicketOrigin
+      href: CRMScript.NetServer.TicketOrigin.yml
     - name: TicketPriorityEscalateEvent
       href: CRMScript.NetServer.TicketPriorityEscalateEvent.yml
     - name: TicketReadStatus
