--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -202,14 +202,14 @@ items:
   nameWithType: NSRoleEntity.GetRoleType()
   fullName: CRMScript.NetServer.NSRoleEntity.GetRoleType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Employee</li><li>Enum: 1 = ExternalUser</li><li>Enum: 2 = Anonymous</li><li>Enum: 3 = System</li></ul>\n"
+  summary: ""
   remarks: "\nChanging this field has no effect, so treat this as a read-only field.\n"
   syntax: 
     content: Integer GetRoleType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The role type. 
+      description: The role type. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRoleEntity thing;\nInteger roleType = thing.GetRoleType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRoleEntity.GetTooltip()
@@ -463,7 +463,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: The role type. Note that changing this field has no effect, so treat this as a read-only field. See enum roleType.
+      description: The role type. Note that changing this field has no effect, so treat this as a read-only field. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -599,3 +599,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.RoleType
+  commentId: T:CRMScript.NetServer.RoleType
+  isExternal: true
+  name: RoleType
+  nameWithType: RoleType
+  fullName: CRMScript.NetServer.RoleType
